# unibit

./: .gitignore  README.md
CourseWork/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setupenv
CourseWork/analysis/: 192knz.ows
CourseWork/cmake/: args.cmake  spdlog.cmake  tflite.cmake
CourseWork/data/: hcvdat0-predict-data.tab  hcvdat0-train-data.tab  reduced-hvc-data.csv
CourseWork/data/reduced/: hcv-top5-rf-v1.csv
CourseWork/models/: hcv-AST-CHE-ALT-ALP-GGT-report.json  hcv-AST-CHE-ALT-ALP-GGT.tflite
CourseWork/scripts/: dl.py  mylogging.py  train.py
CourseWork/src/: hcvmain.cpp
JavaScript/: README.md
JavaScript/exercises/: index.html  styles.css
JavaScript/exercises/additional_tasks/pt1/: index.html  tasks.js
JavaScript/exercises/additional_tasks/pt2/: index.html  (+1 more)
JavaScript/exercises/presentation_examples/: index.html  presentation_examples.js  styles.css  task1.js  task2.js  task3.js  task4.js  tasks1.js  tasks2.js  tasks3.js
JavaScript/lectures-exercises/: JSBasicTeoria.pptx  ex.html  styles.css
JavaScript/project/: README.md  UI_Курсова работа-2023зад.docx
JavaScript/project/task 2/: README.md  index.html
JavaScript/project/task 3/: index.html
JavaScript/project/task 4/: index.html
JavaScript/project/task 5/: index.html
JavaScript/project/task 6/: index.html  main.js  style.css
OUP/: README.md
OUP/exercises/: index.html  info.txt  page2.html  styles.css
OUP/lectures-exercises/: index.html  page1.html  sistem.css
OUP/project/: CV.rar
OUP/project/example/: index.html  styles.css
VSP/: README.md
(+18 files in other folders)
